@@ -14,6 +14,7 @@
         "timer.h": "c",
         "base.h": "c",
         "framebuffer.h": "c",
-        "xiosbase": "c"
+        "xiosbase": "c",
+        "scheduler.h": "c"
     }
 }
