@@ -1,13 +1,18 @@
 #ifndef _SCHED_H
 #define _SCHED_H
 
+/**
+ * \file scheduler.h
+ Contiene definiciones y metodos para el planificador de procesos.
+*/
+
 #define THREAD_CPU_CONTEXT			0 		// offset of cpu_context in task_struct 
 
 #ifndef __ASSEMBLER__
 
-#define THREAD_SIZE				4096
+#define THREAD_SIZE				4096 //4Kb
 
-#define NR_TASKS				64 
+#define NR_TASKS				64
 
 #define FIRST_TASK task[0]
 #define LAST_TASK task[NR_TASKS-1]
@@ -73,11 +78,29 @@ struct task_struct {
 
 
 extern void sched_init(void);
+/**
+ * Ejecuta el algoritmo para planificar los procesos.
+*/
 extern void schedule(void);
+/**
+ * Llama al planificador de procesos cada que ocurre una interrupcion por timer.
+*/
 extern void timer_tick(void);
+/**
+ * Evita que el proceso actual sea cambiado por otro
+*/
 extern void preempt_disable(void);
+/**
+ * Permite que el proceso actual sea cambiado por otro.
+*/
 extern void preempt_enable(void);
+/**
+ * Inicializa el cambio de contexto entre procesos.
+*/
 extern void switch_to(struct task_struct* next);
+/**
+ * Realiza el cambio de contexto entre 2 procesos.
+*/
 extern void cpu_switch_to(struct task_struct* prev, struct task_struct* next);
 
 #define INIT_TASK \
